Adds material efficiency to design datums

--- a/nano/templates/autolathe.tmpl
+++ b/nano/templates/autolathe.tmpl
@@ -104,20 +104,30 @@ Used In File(s): \code\game\machinery\autolathe.dm
 				{{for data.recipes}}
 					<div class="item">
 						<div class="block" style ='padding: 0px; overflow: auto'>
+							<div class="item">
 								<div style ='float: left; max-height:24px; max-width:24px; height:24px; width:24px; margin-left:0px' class='statusDisplayItem'><img src= {{:value.icon}} height=24 width=24></div>
 								<div class="itemContentWidest">{{:value.name}}</div>
+							</div>
 							{{if value.unfolded}}
 								<div class="statusDisplay">
-									<div class="item">
-										<div style="margin-top:8px" class="itemLabelWidest"><b>Build time:</b> {{:value.time}}</div>
-									</div>
+									{{if value.materials}}
 									<div class="item">
 										<div class="itemLabelWidest">Materials</div>
-										<div class="itemContentWidest">{{:value.resources}}</div>
+										{{for value.materials :material:material_i}}
+											<div class="itemContentWidest">{{:material.name}}: {{:material.req}}</div>
+										{{/for}}
 									</div>
+									{{/if}}
+									{{if value.chemicals}}
 									<div class="item">
 										<div class="itemLabelWidest">Reagents</div>
-										<div class="itemContentWidest">{{:value.reagents}}</div>
+										{{for value.chemicals :chemical:chemical_i}}
+											<div class="itemContentWidest">{{:chemical.name}}: {{:chemical.req}}</div>
+										{{/for}}
+									</div>
+									{{/if}}
+									<div class="item">
+										<div style="margin-top:8px" class="itemLabelWidest"><b>Build time:</b> {{:value.time}}</div>
 									</div>
 								</div>
 							{{/if}}
@@ -156,34 +166,40 @@ Used In File(s): \code\game\machinery\autolathe.dm
 				{{/if}}
 			</div>
 			{{if data.current}}
-				<div style ='position: absolute; top: 10px; right: 10px; max-height:64px; max-width:64px; height:64px; width:64px; margin-left:0px' class='statusDisplayItem'><img src= {{:data.icon}} height=64 width=64></div>
-				<div class="itemLabelWidest">Printing {{:data.current}}</div>
+				<div style ='position: absolute; top: 8px; right: 8px; max-height:48px; max-width:48px; height:48px; width:48px; margin-left:0px' class='statusDisplayItem'><img src= {{:data.current.icon}} height=48 width=48></div>
+				<div class="itemLabelwidest">Printing {{:data.current.name}}</div>
+				<div class="itemLabel">
 				{{if data.error}}
-					<div class="itemLabelWidest"><div class="bad">{{:data.error}}</div></div>
+					<div class="bad">{{:data.error}}</div>
 				{{else}}
-					<div class="itemLabelWidest">{{:data.progress}}/{{:data.current_time}}</div>
+					{{:helper.displayBar(data.progress / data.current.time, 0, 1, 'good', data.progress + "/" + data.current.time)}}
+					<br>
 				{{/if}}
+				</div>
 				<div class="item">
 					{{:helper.link('ABORT', '', {'abort_print' : 1}, null, 'bigButton')}}
 				</div>
 				<div class="statusDisplay">
-					<div class="itemLabelWidest"><b>Build time:</b> {{:data.current_time}}</div>
+					{{if data.current.materials}}
 					<div class="item">
 						<div class="itemLabelWidest">Materials</div>
-						{{for data.req_materials}}
-							<div class="itemContentWidest">{{:value.name}}: {{:value.req}}</div>
-						{{empty}}
-							<div class="itemContentWidest">None</div>
+						{{for data.current.materials :material:material_i}}
+							<div class="itemContentWidest">{{:material.name}}: {{:material.req}}</div>
 						{{/for}}
 					</div>
+					{{/if}}
+					{{if data.current.chemicals}}
 					<div class="item">
 						<div class="itemLabelWidest">Reagents</div>
-						{{for data.req_reagents}}
-							<div class="itemContentWidest">{{:value.name}}: {{:value.req}}</div>
-						{{empty}}
-							<div class="itemContentWidest">None</div>
+						{{for data.current.chemicals :chemical:chemical_i}}
+							<div class="itemContentWidest">{{:chemical.name}}: {{:chemical.req}}</div>
 						{{/for}}
 					</div>
+					{{/if}}
+					<div class="item">
+						<div style="margin-top:8px" class="itemLabelWidest"><b>Build time:</b> {{:data.current.time}}</div>
+					</div>
+
 				</div>
 			{{else}}
 				<div class="itemLabelWidest"><div class="average">Idle</div></div>
